--- a/app/pages/css/header.css
+++ b/app/pages/css/header.css
@@ -45,11 +45,12 @@
 
   nav ul li a {
     font-weight: 600;
+    color: #0066ff;
     transition: color 0.3s;
   }
 
   nav ul li a:hover {
-    color: #0066ff;
+    color: #072757;
   }
 
   /* ---------- PROFILE DROPDOWN ---------- */
@@ -94,7 +95,12 @@
     color: #e63946;
     font-weight: 600;
   }
-
+  header img{
+    width:40px;
+    height:40px;
+    border-radius:50%;
+    object-fit:cover;
+  }
   @keyframes fadeIn {
     from { opacity: 0; transform: translateY(-5px); }
     to { opacity: 1; transform: translateY(0); }
