--- a/Schwa/app/pages/css/main2.css
+++ b/Schwa/app/pages/css/main2.css
@@ -68,7 +68,7 @@
   /* Section principale */
   section {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
     padding: 3rem 5%;
     justify-items: center;
@@ -163,6 +163,7 @@
 
   .profile-name {
     font-weight: 600;
+    color: #11468F;
   }
 
   .profile-dropdown {
